@@ -13,7 +13,9 @@ Build-Depends: debhelper (>= 9),
                pkg-kde-tools,
                qtbase5-private-dev (>= 5.2.1+dfsg~),
                libmng-dev,
-               libtiff-dev
+               libtiff-dev,
+               xauth,
+               xvfb
 Standards-Version: 3.9.5
 Homepage: http://qt-project.org/
 Vcs-Git: git://anonscm.debian.org/pkg-kde/qt/qtimageformats.git
