@@ -2,6 +2,7 @@ qtimageformats-opensource-src (5.2.1-3) UNRELEASED; urgency=medium
 
   [ Dmitry Shachnev ]
   * Remove dh_builddeb override, xz is now the default compression method.
+  * Run tests during build (based on a patch by Chris Gagnon).
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 13 May 2014 17:04:06 +0400
 
